--- a/MakeSafariDrumpf.safariextension/Info.plist
+++ b/MakeSafariDrumpf.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Cliff Rowley</string>
 	<key>Builder Version</key>
-	<string>11601.4.4</string>
+	<string>11601.5.17.1</string>
 	<key>CFBundleDisplayName</key>
 	<string>MakeSafariDrumpf</string>
 	<key>CFBundleIdentifier</key>
@@ -29,7 +29,7 @@
 	<key>Description</key>
 	<string>Make Donald Drumpf again!</string>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>FPN4GP46Z8</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
